--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,5 @@
 
-<style>
+<!-- <style>
     .validBox {
       border-color : green;
     }
@@ -8,8 +8,7 @@
       border-color : red;
     }
 
-   </style>
-
+   </style> -->
 <div>
         <form [formGroup]="userLogin" (ngSubmit)="onSubmit()">
         <span>UserName/email</span>
