--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -9,21 +9,36 @@
     }
 
    </style> -->
-<div class="container">
-  <div class="row">
-    <div class="col-md-12">
-      <form [formGroup]="userLogin" (ngSubmit)="onSubmit()">
-          <span>UserName/email</span>
-          <input type="text" [class.validBox]="userLogin.get('user').valid && userLogin.get('user').touched" [class.notValidBox]="userLogin.get('user').invalid && userLogin.get('user').touched" formControlName='user' placeholder="Enter UserName/email">
+   <div class="crm_login">
+      <div class="container">
+          <div class="row align-item-center justify-content-center ">
+            <div class="col-md-12 heading">
+              <h2>Login</h2>
+            </div>
+            <div class="col-lg-5 col-md-6 col-sm-12 col-12">
+              <form [formGroup]="userLogin" (ngSubmit)="onSubmit()">
+                  <div class="row">
+                    <div class="col-md-12">
+                        <mat-form-field>
+                            <!-- <label>UserName/email</label> -->
+                          <input matInput type="text" [class.validBox]="userLogin.get('user').valid && userLogin.get('user').touched" [class.notValidBox]="userLogin.get('user').invalid && userLogin.get('user').touched" formControlName='user' placeholder="Enter UserName/email">
+                        </mat-form-field>
+                    </div>
+                    <div class="col-md-12">
+                        <mat-form-field>
+                      <!-- <label>Password</label> -->
+                        <input matInput type="password" placeholder="enter password here" [class.validBox]="userLogin.get('password').valid && userLogin.get('password').touched" [class.notValidBox]="userLogin.get('password').invalid && userLogin.get('password').touched" formControlName='password'>
+                      </mat-form-field>
+                    </div>
+                  </div>
+                  <input type="submit" value="Login" class="submit">
+                  </form>
+        
+                  <p class="new_user"> New User <a routerLink="/signup"><button> signup </button></a> </p>
+                  <!-- <button (click)="logout()"> Logout </button> -->
+          </div>
+        </div>
+        </div>
+   </div>
 
-          <span>Password</span>
-          <input type="password" placeholder="enter password here" [class.validBox]="userLogin.get('password').valid && userLogin.get('password').touched" [class.notValidBox]="userLogin.get('password').invalid && userLogin.get('password').touched" formControlName='password'>
-          <input type="submit" value="Login">
-          </form>
-
-          <p> New User <a routerLink="/signup"><button> signup </button></a> </p>
-          <button (click)="logout()"> Logout </button>
-  </div>
-</div>
-</div>
 
